--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -295,6 +295,9 @@ td.adminData > input[type="checkbox"] {
 }
 .t-grid .btn {
 	padding: @paddingSmall;
+}
+.t-grid .btn,
+.t-grid .btn [class^="icon-"] {
 	font-size: @fontSizeSmall;	
 }
 .t-grid .t-button [class^="icon-"],
@@ -1063,7 +1066,9 @@ table.order-edit td {
 	}
 }
 
-/* PLUGINS */
+
+/* Plugins
+-------------------------------------------------------------- */
 
 .plugins-group h3 {
     font-family: 'Segoe UI Semibold', 'Segoe UI', Helvetica, Arial; 
