--- a/src/Presentation/SmartStore.Web/Views/Catalog/CrossSellProducts.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/CrossSellProducts.cshtml
@@ -2,6 +2,8 @@
 @using SmartStore.Web.Models.Catalog;
 @if (Model.Count > 0)
 {
+	<div class="clear"></div>
+	
     <div class="block product-grid cross-sells">
         <div class="block-title cross-sells-title">
             @T("ShoppingCart.CrossSells")
