--- a/src/Presentation/SmartStore.Web/Administration/Views/Store/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Store/_CreateOrUpdate.cshtml
@@ -51,6 +51,15 @@
 	</tr>
 	<tr>
 		<td class="adminTitle">
+			@Html.SmartLabelFor(model => model.ContentDeliveryNetwork)
+		</td>
+		<td class="adminData">
+			@Html.EditorFor(model => model.ContentDeliveryNetwork)
+			@Html.ValidationMessageFor(model => model.ContentDeliveryNetwork)
+		</td>
+	</tr>
+	<tr>
+		<td class="adminTitle">
 			@Html.SmartLabelFor(model => model.SslEnabled)
 		</td>
 		<td class="adminData">
