Added theme variables for the color of prices

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
@@ -471,6 +471,7 @@ form.form-search {
 		.price {
 			font-weight: bold;
 			font-size: @baseFontSize;
+            color: @productListsPriceColor;
 		}
 	}
 	.old-product-price {
@@ -532,6 +533,7 @@ form.form-search {
 		margin-bottom: 0;
 		.price {
 			font-size: 20px;
+            color: @productListsPriceColor;
 		}
 	}
 	.transport-charge,
@@ -1920,7 +1922,7 @@ table.cart .cart-item-row .qty-input {
 }
 .product-details-page .price-details .product-price {
 	font-size: 24px;
-	color: @orange;
+    color: @productDetailsPriceColor;
 	line-height: 26px;
 	min-height: 28px;
 }
