--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/variables.custom.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/variables.custom.less
@@ -28,3 +28,7 @@
 @productFilter:                     @var_ProductFilterBackgroundColor;
 @checkoutProgress:                  @var_CheckoutProgressBackgroundColor;
 @alternateListItem:                 @var_AlternateListItemBackgroundColor;
+
+//price
+@productListsPriceColor:            @var_ProductListsPriceColor;
+@productDetailsPriceColor:          @var_ProductDetailPriceColor;
