--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Views/Shared/ConfigureTheme.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Views/Shared/ConfigureTheme.cshtml
@@ -201,6 +201,8 @@
 @helper TabMisc()
 {
     <table class="adminContent">
+        @ThemeVarEditor("ProductListsPriceColor")
+        @ThemeVarEditor("ProductDetailPriceColor")
         @ThemeVarEditor("WellBackground")
         @ThemeVarEditor("ItemBoxBoxShadowColor")
         @ThemeVarEditor("SimpleBoxHeaderColor")
