--- a/src/Presentation/SmartStore.Web/Views/Shared/_ColumnsThree.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/_ColumnsThree.cshtml
@@ -17,19 +17,19 @@
     {
         @Html.Widget("left_side_column_before")
 
-        @Html.Action("CategoryNavigation", "Catalog", new { currentCategoryId = this.CurrentCategoryId, currentProductId = this.CurrentProductId })
+        @Html.Action("CategoryNavigation", "Catalog", new { currentCategoryId = this.CurrentCategoryId, currentProductId = this.CurrentProductId, area = "" })
         @Html.Widget("left_side_column_after_category_navigation")
 
-        @Html.Action("ManufacturerNavigation", "Catalog", new { currentManufacturerId = this.CurrentManufacturerId })
+        @Html.Action("ManufacturerNavigation", "Catalog", new { currentManufacturerId = this.CurrentManufacturerId, area = "" })
         @Html.Widget("left_side_column_after_manufacturer_navigation")
 
-        @Html.Action("PopularProductTags", "Catalog")
+        @Html.Action("PopularProductTags", "Catalog", new { area = "" })
         @Html.Widget("left_side_column_after_tags")
 
-        @Html.Action("InfoBlock", "Common")
+        @Html.Action("InfoBlock", "Common", new { area = "" })
         @Html.Widget("left_side_column_after_info")
 
-        @Html.Action("PollBlock", "Poll", new { systemKeyword = "LeftColumnPoll" })
+        @Html.Action("PollBlock", "Poll", new { systemKeyword = "LeftColumnPoll", area = "" })
         @Html.Widget("left_side_column_after_poll")
 
         @Html.Widget("left_side_column_after")
@@ -54,9 +54,9 @@
     {
         @Html.Widget("right_side_column_before")
 
-        @Html.Action("RecentlyViewedProductsBlock", "Catalog")
+        @Html.Action("RecentlyViewedProductsBlock", "Catalog", new { area = "" })
         @Html.Widget("right_side_column_after_recentlyviewed")             
-        @Html.Action("PollBlock", "Poll", new { systemKeyword = "RightColumnPoll" })
+        @Html.Action("PollBlock", "Poll", new { systemKeyword = "RightColumnPoll", area = "" })
         @Html.Widget("right_side_column_after_poll")   
 
         @Html.Widget("right_side_column_after")
