--- a/src/Presentation/SmartStore.Web/Views/Shared/_ColumnsTwo.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/_ColumnsTwo.cshtml
@@ -16,10 +16,10 @@
     {
         @Html.Widget("left_side_column_before")
 
-        @Html.Action("CategoryNavigation", "Catalog", new { currentCategoryId = this.CurrentCategoryId, currentProductId = this.CurrentProductId })
+        @Html.Action("CategoryNavigation", "Catalog", new { currentCategoryId = this.CurrentCategoryId, currentProductId = this.CurrentProductId, area = "" })
         @Html.Widget("left_side_column_after_category_navigation")
 
-        @Html.Action("ManufacturerNavigation", "Catalog", new { currentManufacturerId = this.CurrentManufacturerId })
+        @Html.Action("ManufacturerNavigation", "Catalog", new { currentManufacturerId = this.CurrentManufacturerId, area = "" })
         @Html.Widget("left_side_column_after_manufacturer_navigation")        
 
         @Html.Widget("left_side_column_after")
