Plugin refactoring. Plugins are regular MVC areas now. * No embedded views anymore. Views get copied to the deployment folder * No cumbersome return View("Very.Long.View.Identifier") anymore * Views in plugin source folders can be edited during debug

--- a/src/Plugins/ExternalAuth.OpenId/Views/ExternalAuthOpenId/PublicInfo.cshtml
+++ b/src/Plugins/ExternalAuth.OpenId/Views/ExternalAuthOpenId/PublicInfo.cshtml
@@ -14,7 +14,7 @@
     var storeLocation = EngineContext.Current.Resolve<SmartStore.Core.IWebHelper>().GetStoreLocation();
 }
 
-@using (Html.BeginRouteForm("Plugin.ExternalAuth.OpenId.Login", new { ReturnUrl = HttpContext.Current.Request.QueryString["ReturnUrl"] }, FormMethod.Post, new { id = "openid_form" }))
+@using (Html.BeginRouteForm("ExternalAuth.OpenId", new { ReturnUrl = HttpContext.Current.Request.QueryString["ReturnUrl"], action = "Login" }, FormMethod.Post, new { id = "openid_form" }))
 {
     <input type="hidden" name="action" value="verify" />
     <fieldset class="oauth-login-openid">
