Further ProviderManager changes (incomplete)

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -527,6 +527,8 @@ a:hover {
 		
 		@c: fade(#f6f6f6, 60%);
 		.gradientBar(lighten(@c, 8%), @c);
+
+		text-shadow: none;
 		border-bottom: 1px solid #dadada;
 
 		.title { 
