--- a/src/Presentation/SmartStore.Web/Administration/Views/Tax/Providers.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Tax/Providers.cshtml
@@ -24,12 +24,19 @@
                         columns.Bound(x => x.FriendlyName).Width(250);
                         columns.Bound(x => x.IsPrimaryTaxProvider)
                             .Template(item => @Html.SymbolForBool(item.IsPrimaryTaxProvider))
+							.Template(					    
+								@<a href='@Url.Action("Providers", new { systemName = item.SystemName })' class="btn" @Html.Attr("disabled", "disabled", item.IsPrimaryTaxProvider) title='@T("Admin.Configuration.Tax.Providers.Fields.MarkAsPrimaryProvider").Text'>
+									@if (item.IsPrimaryTaxProvider)
+									{
+										<i class="icon icon-ok"></i>
+									}
+									@T("Admin.Telerik.GridLocalization.Select")
+								</a>
+							)
                             .ClientTemplate(@Html.SymbolForBool("IsPrimaryTaxProvider"))
                             .Centered()
                             .Width(100)
                             .ReadOnly();
-                        columns.Command(commands => commands.Select().Text(T("Admin.Telerik.GridLocalization.Select").ToString()))
-                            .Title(T("Admin.Configuration.Tax.Providers.Fields.MarkAsPrimaryProvider").Text).Width(100);
                         columns.Template(
                                 @<div>
                                     @Html.ActionLink(T("Admin.Configuration.Tax.Providers.Configure").Text, "ConfigureProvider", new { systemName = item.SystemName })
@@ -40,12 +47,7 @@
                             .Centered()
                             .Title(T("Admin.Configuration.Tax.Providers.Configure").Text);
                         columns.Bound(x => x.SystemName).Width(250);
-                    })
-                    .DataBinding(dataBinding =>
-                    {
-                        dataBinding.Ajax().Select("Providers", "Tax");
-                    })
-                    .EnableCustomBinding(true))
+                    }))
         </td>
     </tr>
 </table>
