--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Manufacturers.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Manufacturers.cshtml
@@ -6,7 +6,13 @@
 {
     if (Model.NumberOfAvailableManufacturers > 0)
     {
-        @(Html.Telerik().Grid<ProductModel.ProductManufacturerModel>()
+        <script>
+			function onProductManufacturerEdit(e) {
+                $(e.form).find('#Manufacturer').select2('val', e.dataItem['ManufacturerId']);
+            }
+        </script>
+	
+		@(Html.Telerik().Grid<ProductModel.ProductManufacturerModel>()
             .Name("productmanufacturers-grid")
             .DataKeys(keys =>
             {
@@ -42,12 +48,6 @@
             .ToolBar(commands => commands.Insert())
             .ClientEvents(events => events.OnEdit("onProductManufacturerEdit"))
             .EnableCustomBinding(true))
-
-        <script type="text/javascript">
-            function onProductManufacturerEdit(e) {
-                $(e.form).find('#Manufacturer').select2('val', e.dataItem['ManufacturerId']);
-            }
-        </script>
     }
     else
     {
