--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Categories.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Categories.cshtml
@@ -6,7 +6,13 @@
 {
     if (Model.NumberOfAvailableCategories > 0)
     {
-        @(Html.Telerik().Grid<ProductModel.ProductCategoryModel>()
+        <script>
+			function onProductCategoryEdit(e) {
+                $(e.form).find('#Category').select2('val', e.dataItem['CategoryId']);
+            }
+        </script>
+		
+		@(Html.Telerik().Grid<ProductModel.ProductCategoryModel>()
             .Name("productcategories-grid")
             .DataKeys(keys =>
             {
@@ -42,12 +48,6 @@
             .ToolBar(commands => commands.Insert())
             .ClientEvents(events => events.OnEdit("onProductCategoryEdit"))
             .EnableCustomBinding(true))
-
-        <script type="text/javascript">
-            function onProductCategoryEdit(e) {
-                $(e.form).find('#Category').select2('val', e.dataItem['CategoryId']);
-            }
-        </script>
     }
     else
     {
